# PlanFinderGUI

./: .gitignore  README.md  app.py  build.bat  build.sh  plan_finder_gui.spec  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
img/: scv.icns
src/plan_finder_gui/: __init__.py  main.py  path_bootstrap.py
src/plan_finder_gui/engine/: committer.py  discovery.py  display_interface.py  engine.py  executor.py  fileutil.py  models.py  preset.py  prompts.py  reporter.py  session_manager.py  state.py  throttle.py  tool_summary.py  translator.py
src/plan_finder_gui/ui/: api_key_widget.py  ccusage_install_dialog.py  claude_session_panel.py  config_panel.py  google_auth_dialog.py  gui_display.py  icon_loader.py  log_panel.py  main_window.py  plan_card.py  report_browser.py  sessions_panel.py  settings_dialog.py  sound_player.py  status_bar.py  update_checker.py
tests/: test_committer.py  test_engine.py  test_main_window.py  test_prompts.py  test_report_browser.py  test_reporter.py  test_session_manager.py  test_settings_dialog.py  test_throttle.py
