[project]
name = "plan-finder-gui"
version = "0.1.0"
description = "Cross-platform GUI for the plan-finder AI code improvement tool"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7.0",
    "qasync>=0.27.1",
    "claude-agent-sdk>=0.1.30",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "markdown>=3.5",
    "google-cloud-translate>=3.26.0",
    "psutil>=5.9.0",
]

[project.scripts]
plan-finder-gui = "plan_finder_gui.main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plan_finder_gui"]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
]
